Add "@mui/icons-material" and icons to QR code types list.

--- a/src/components/qr-code-types-list.css
+++ b/src/components/qr-code-types-list.css
@@ -25,4 +25,8 @@
 	#qr-code-types-list .MuiListItem-root {
 		max-width: fit-content;
 	}
+
+	#qr-code-types-list .MuiListItemIcon-root {
+		min-width: 35px;
+	}
 }
